Added icons and basic animal info

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!Doctype HTML>
 <header>
   <title>Zoo</title>
+   <!-- <link rel="stylesheet" href="fontello/css/fontello.css"> -->
 </header>
 
 <body>
   <!--Content goes here-->
+  <img class= "atlanticPuffin" src="my-icons-collection/png/animal-4.png">
+  <img class= "fennecFox" src="my-icons-collection/png/animals.png">
 
 <script src="main.js"></script>
 </body>
