fixed code and worked on methods:

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!Doctype HTML>
 <header>
-  <title>Zoo</title>
-   <!-- <link rel="stylesheet" href="fontello/css/fontello.css"> -->
+    <title>Zoo</title>
+    <link rel="stylesheet" href="main.css">
 </header>
 
 <body>
-  <!--Content goes here-->
-  <img class= "atlanticPuffin" src="my-icons-collection/png/animal-4.png">
-  <img class= "fennecFox" src="my-icons-collection/png/animals.png">
-
-<script src="main.js"></script>
+    <!--Content goes here-->
+    <div class="foxCage">
+        <img class="fennecFox" src="my-icons-collection/png/animals.png">
+    </div>
+    <div class="puffinCage">
+        <img class="atlanticPuffin" src="my-icons-collection/png/animal-4.png">
+    </div>
+    <script src="main.js"></script>
 </body>
+
 </html>
