Created working animals and HTML

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 
 <body>
     <!--Content goes here-->
-    <div class="foxCage">
-        <img class="fennecFox" src="my-icons-collection/png/animals.png">
+    <div id="foxCage">
+        <img id="fennecFox" src="my-icons-collection/png/animals.png">
+        <div id="foxInfo">Franz</div>
     </div>
-    <div class="puffinCage">
-        <img class="atlanticPuffin" src="my-icons-collection/png/animal-4.png">
+    <div id="puffinCage">
+        <img id="atlanticPuffin" src="my-icons-collection/png/animal-4.png">
+        <div id="puffinInfo"></div>
     </div>
     <script src="main.js"></script>
 </body>
