--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <body>
     <!--Content goes here-->
+    <h1>THE ZOO</h1>
     <div id="foxCage">
         <img id="fennecFox" src="my-icons-collection/png/animals.png">
         <div id="foxInfo">Franz</div>
@@ -13,6 +14,10 @@
     <div id="puffinCage">
         <img id="atlanticPuffin" src="my-icons-collection/png/animal-4.png">
         <div id="puffinInfo"></div>
+    </div>
+    <div id="capybaraCage">
+        <img id="capybara" src="my-icons-collection/png/animal-2.png">
+        <div id="capybaraInfo"></div>
     </div>
     <script src="main.js"></script>
 </body>
