--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div id="capybaraInfo"></div>
     </div>
     <script src="main.js"></script>
+    <script src="jquery-3.1.1.min.js"></script>
 </body>
 
 </html>
